[gd_scene load_steps=6 format=3 uid="uid://c6oqf0ebodb02"]

[ext_resource type="Texture2D" uid="uid://b6xrhk5bc33lv" path="res://assets/ui/blue_headshot.png" id="1_1v3ht"]
[ext_resource type="Script" path="res://scenes/player_stats_view.gd" id="1_cvk6m"]
[ext_resource type="Texture2D" uid="uid://bqtl44a8lnebk" path="res://assets/ui/progbar_under.png" id="2_oocnk"]
[ext_resource type="Texture2D" uid="uid://2tr6fsyd3x55" path="res://assets/ui/progbar_over.png" id="3_yjc1s"]
[ext_resource type="FontFile" uid="uid://bo7h0qqqm5o8n" path="res://assets/fonts/PublicPixel.ttf" id="4_ijq5e"]

[node name="Player_Stats" type="Control"]
layout_mode = 3
anchor_top = 0.15
anchor_right = 0.272
anchor_bottom = 0.239
offset_top = -10.0
offset_right = -0.0400085
offset_bottom = -10.02
scale = Vector2(0.9, 0.9)
script = ExtResource("1_cvk6m")

[node name="player_hand" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.2636
offset_top = -15.0075
offset_right = 1088.26
offset_bottom = 359.992
scale = Vector2(0.04, 0.04)
theme_override_constants/separation = 50

[node name="background_border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.156
anchor_right = 0.269
anchor_bottom = 0.233
offset_left = 0.0644276
offset_top = -2.5634
offset_right = 63.9224
offset_bottom = 12.2046

[node name="background_rectangle" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.156
anchor_right = 0.269
anchor_bottom = 0.233
offset_left = 0.850111
offset_top = -1.38489
offset_right = 62.7081
offset_bottom = 11.3831
color = Color(0.294118, 0.435294, 0.607843, 1)

[node name="robot_mugshot" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 15.0
texture = ExtResource("1_1v3ht")

[node name="bet_total_progress_bar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 10.0
offset_right = 117.0
offset_bottom = 16.0
scale = Vector2(0.6, 0.6)
max_value = 80.0
value = 80.0
texture_under = ExtResource("2_oocnk")
texture_progress = ExtResource("3_yjc1s")

[node name="bet_amount" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.137
anchor_top = 0.167
anchor_right = 0.237
anchor_bottom = 0.211
offset_left = 25.081
offset_top = 0.328
offset_right = 63.381
offset_bottom = 6.624
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.560784, 0.819608, 0.309804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.0627451)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/bold_font = ExtResource("4_ijq5e")
theme_override_font_sizes/normal_font_size = 4
theme_override_font_sizes/bold_font_size = 4
bbcode_enabled = true
text = "$0"

[node name="win_percent" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.178
anchor_right = 0.153
anchor_bottom = 0.25
offset_left = 12.867
offset_top = 6.152
offset_right = 30.689
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("4_ijq5e")
theme_override_font_sizes/normal_font_size = 4
bbcode_enabled = true
text = "0%"

[node name="player_balance_rectangle" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.724138
anchor_top = -0.381
anchor_right = 0.241
offset_left = 63.163
offset_top = 0.868966
offset_right = -5.80397
offset_bottom = 0.772966
scale = Vector2(2.0428, 0.897108)
color = Color(1, 1, 1, 0.0901961)

[node name="player_balance" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.111
anchor_right = 0.075
anchor_bottom = 0.156
offset_left = 0.560486
offset_top = -5.81322
offset_right = 19.5575
offset_bottom = 0.466784
scale = Vector2(1.051, 1)
theme_override_fonts/normal_font = ExtResource("4_ijq5e")
theme_override_font_sizes/normal_font_size = 3
text = "$0"

[node name="player_hidden_rectangle" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0, 0, 0, 0.607843)

[node name="player_turn_status" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1.14667
offset_top = 16.1212
offset_right = 16.1467
offset_bottom = 21.1212
scale = Vector2(0.9, 0.9)
color = Color(0.560784, 0.819608, 0.309804, 1)

[node name="TurnText" type="RichTextLabel" parent="player_turn_status"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 14.0
offset_bottom = 5.0
theme_override_fonts/normal_font = ExtResource("4_ijq5e")
theme_override_font_sizes/normal_font_size = 3
text = "TURN"
